// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. icondiamond renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;

exports[`2. icontwitter renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`3. iconvideo renders with different colours 1`] = `
Array [
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`4. iconemail renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;

exports[`5. iconstar renders with different colours 1`] = `
<polygon
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`6. iconfacebook renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;
